# history

./: .gitignore  Makefile  README.md  dune-project  history.opam
.github/workflows/: update.yaml
data/events/: 001-lillefp1.yaml  002-lillefp2.yaml  003-lillefp3.yaml  004-lillefp4.yaml  005-lillefp5.yaml  006-lillefp6.yaml  007-lillefp7.yaml  008-lillefp8.yaml  009-lillefp9.yaml  010_lillefp10.yaml  011_lillefp11.yaml  012_lillefp12.yaml  013_lillefp13.yaml  014_lillefp14.yaml  015_lillefp15.yaml  016_lambdalille16.yaml  017_lambdalille17.yaml  018_lambdaremote1.yaml  019_lambdaremote2.yaml  020_lambdaremote3.yaml  021_lambdaremote4.yaml  022_lambdaremote5.yaml  023_lambdaremote6.yaml  024_lambdaremote7.yaml  025_lambdaremote8.yaml  026_lambdaremote9.yaml  027_lambdaremote10.yaml  028_lambdaremote11.yaml  029_lambdaremote12.yaml  030_lambdaremote13.yaml  031_lambdaremote14.yaml  032_lambdaremote15.yaml
data/places/: derniercri-lille.yaml  epitech-lille.yaml  scaleway-lille.yaml
data/speakers/: adrien-bensaibi.yaml  antonin-carette.yaml  arnaud-bailly.yaml  benoit-caccinolo.yaml  caroline-gaudreau.yaml  clement-delafargue.yaml  denis-merigoux.yaml  didier-plaindoux.yaml  florian-angeletti.yaml  francois-teychene.yaml  frederic-cabestre.yaml  gabriel-scherer.yaml  guillaume-bailleul.yaml  guillaume-bogard.yaml  guillaume-claret.yaml  jules-ivanic.yaml  jules-villard.yaml  julien-debon.yaml  julien-dehos.yaml  julien-leclercq.yaml  julien-truffaut.yaml  kevin-disneur.yaml  leandro-ostera.yaml  luis-parada.yaml  mathieu-acthernoene.yaml  (+17 more)
templates/: history.md
(+66 files in other folders)
